--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "ganache-cli start --networkId 1337",
     "test": "truffle test",
     "test-factory": "truffle test test/testFactory.js",
-    "deploy:dev": "truffle migrate --network=development --reset"
+    "deploy:dev": "truffle migrate --network=development --reset",
+    "compile": "truffle compile"
   },
   "keywords": [
     "BullTycoonss",
@@ -20,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.1",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "truffle-assertions": "^0.9.2"
   }
 }
