--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@openzeppelin/contracts": "^4.3.1",
     "@openzeppelin/test-helpers": "^0.5.15",
     "@truffle/hdwallet-provider": "^1.5.1",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "truffle-assertions": "^0.9.2"
   }
